tests/macros/int/editor.stderr
error: option `editor` does not exist for kind `int`
 --> tests/macros/int/editor.rs:2:41
  |
2 |     let q = requestty::questions![Int { editor: todo!() }];
  |                                         ^^^^^^
