tests/macros/int/editor.rs
fn main() {
    let q = requestty::questions![Int { editor: todo!() }];
}
